[gd_scene load_steps=7 format=2]

[ext_resource path="res://Sprites/player.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Player.gd" type="Script" id=2]
[ext_resource path="res://Sprites/crosshair.png" type="Texture" id=3]
[ext_resource path="res://Sprites/barrier.png" type="Texture" id=4]

[sub_resource type="CircleShape2D" id=1]
radius = 5.0

[sub_resource type="CircleShape2D" id=2]
radius = 23.0

[node name="Player" type="Node2D"]
position = Vector2( 258, 230 )
rotation = 2.35619
script = ExtResource( 2 )

[node name="PlayerSprite" type="Sprite" parent="."]
scale = Vector2( 0.03, 0.03 )
texture = ExtResource( 1 )
region_rect = Rect2( 9.088, 0, 0, 0 )
region_filter_clip = true

[node name="BarrierSprite" type="Sprite" parent="."]
visible = false
scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 4 )

[node name="Crosshair" type="Sprite" parent="."]
visible = false
z_index = 1
texture = ExtResource( 3 )

[node name="PrimaryFireTimer" type="Timer" parent="."]
one_shot = true

[node name="InvincibilityTimer" type="Timer" parent="."]
one_shot = true

[node name="SpriteFlickerTimer" type="Timer" parent="."]
one_shot = true

[node name="PowerupTimers" type="Node" parent="."]

[node name="SurroundTimer" type="Timer" parent="PowerupTimers"]
one_shot = true

[node name="BarrierTimer" type="Timer" parent="PowerupTimers"]
one_shot = true

[node name="MultishotTimer" type="Timer" parent="PowerupTimers"]
one_shot = true

[node name="HomingTimer" type="Timer" parent="PowerupTimers"]
one_shot = true

[node name="HurtBox" type="Area2D" parent="."]
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtBox"]
shape = SubResource( 1 )

[node name="CollectionRadius" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="CollectionRadius"]
shape = SubResource( 2 )
